--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -2,12 +2,12 @@
 <h3>Description</h3>
 
   
-   This Angular SPA Client work together with a secure ASP.NET Core 2.2 Web API using JWT Authentication 
+   A Angular SPA Client at GitHub Pages is the frontend for a ASP.NET Core 2.2 Web API at Azure App Service using JWT Authentication 
    <br/> <br/>
    
    <b>Last Updated</b>
    <ul>
-    <li>18-12-2022</li>
+    <li>21-12-2022</li>
    </ul>
 
    <b>Main functionality</b>
@@ -63,8 +63,8 @@
 
   <b>Hosting</b>
   <ul>
-    <li>The Angular SPA client is hosted at a traditionel Webhotel on an IIS</li>
-    <li>The Web API is hosted at a traditionel Webhotel on an IIS</li>
+    <li>The Angular SPA client is hosted at GitHub Pages</li>
+    <li>The Web API is hosted at Azure App Service</li>
   </ul>
 
   <b>Text Editor</b>
