Added DevOps information to the About Page

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -7,7 +7,7 @@
    
    <b>Last Updated</b>
    <ul>
-    <li>21-12-2022</li>
+    <li>02-01-2023</li>
    </ul>
 
    <b>Main functionality</b>
@@ -60,6 +60,12 @@
       
    </ul>
 
+  
+   <b>DevOps</b>
+   <ul>
+     <li>The Angular client has a CI / CD implemented by GitHub Actions and GitHub Pages</li>
+     <li>The Web API has a CI / CD implemented by Azure DevOps and Azure App Service</li>
+   </ul>
 
   <b>Hosting</b>
   <ul>
