--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -64,7 +64,7 @@
    <b>DevOps</b>
    <ul>
      <li>The Angular client has a CI / CD implemented by GitHub Actions and GitHub Pages</li>
-     <li>The Web API has a CI / CD implemented by Azure DevOps and Azure App Service</li>
+     <li>The Web API has a CI / CD implemented by GitHub Actions and Azure App Service</li>
    </ul>
 
   <b>Hosting</b>
