--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -63,8 +63,8 @@
   
    <b>DevOps</b>
    <ul>
-     <li>The Angular client has a CI / CD implemented by GitHub Actions and GitHub Pages</li>
-     <li>The Web API has a CI / CD implemented by GitHub Actions and Azure App Service</li>
+     <li>The Angular client has a CI / CD Pipeline implemented by GitHub Actions and GitHub Pages</li>
+     <li>The Web API has a CI / CD Pipeline implemented by GitHub Actions and Azure App Service</li>
    </ul>
 
   <b>Hosting</b>
